8/fix/footer overlap (#17)
* change position of footer to fixed

* change from float to flexbox

--- a/react-todolist/public/styles.css
+++ b/react-todolist/public/styles.css
@@ -4,6 +4,15 @@
     box-sizing: border-box;
 }
 
+.container {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: flex-start;
+    align-content: flex-start;
+    justify-content: flex-start;
+    flex: 1 1 auto;
+}
+
 html {
     font-family: 'Oswald', sans-serif;
 }
@@ -27,7 +36,7 @@ header h1 {
 }
   
 footer {
-    position: absolute;
+    position: fixed;
     text-align: center;
     bottom: 0;
     width: 100%;
@@ -42,10 +51,9 @@ footer p {
     background: #fff;
     border-radius: 7px;
     box-shadow: 0 2px 5px #ccc;
-    padding: 10px;
-    width: 240px;
-    margin: 16px;
-    float: left;
+    margin: 1%;
+    padding: 1%;
+    flex: 1 1 auto;
 }
 
 .note--done {
